# rust-rest

./: .env  .gitignore  .test.env  Cargo.toml  README.md  Rocket.toml
.sqlx/: query-0a2318433a23ac222475fc4e254149960a8a5b8319719d4f7273903adbc46336.json  query-0bcec47cf8302dd274d226e5463b2901a9d0382f33d728cba3cea76eff4d5dff.json  query-32c1f2edb296e9eea15396275dd9da791c1d36b42e496d5bfd0613a102d34b0d.json  query-bfcd9d4d1d8dd8947f7f5c0a8f41297db448924b0ed3a844cd9ab4707db648f1.json
migrations/: 0001_initial.sql
src/: lib.rs  main.rs
src/database/: custom_pool.rs  mod.rs  thruster.rs
src/endpoints/: description.rs  hello.rs  mod.rs  thruster.rs
tests/: endpoint_integration_tests.rs  integration_tests.rs
