[package]
name = "rust-rest"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.5", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
sqlx = { version = "0.7", features = ["macros"] }
rocket_db_pools = { version = "0.1.0", features = ["sqlx_sqlite"] }

